--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -43,11 +43,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{% static 'CSS/styles88.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/related87.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/postpag63.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/styleterms11.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/related21.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/postpag112.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/styleterms5.css'%}?v={{ STATIC_VERSION }}">
   <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/profile45.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/profile12.css'%}?v={{ STATIC_VERSION }}">
   <link rel="stylesheet" href="{% static 'CSS/about31.css'%}?v={{ STATIC_VERSION }}">
 
   <!-- 
@@ -176,8 +176,8 @@
         </div>
 
         <p class="copyright-text">
-          Copyright 2025 © Tech Scape - Personal Blog Template.
-          Developed by Laycon
+          © 2025 Tech Scape.<br>
+          All Rights Reserved.
         </p>
 
       </nav>
@@ -220,10 +220,7 @@
             </h1>
 
             <p class="hero-text">
-              Your go-to platform for discovering the latest in tech and blogging. Here, we provide updates
-              and insights to help users engage with dynamic content and community discussions. Explore 
-              features like user-friendly categories, comment sections, and social sharing tools to stay 
-              connected. With registration, enjoy personalized interactions and post engagement. 
+              Your ultimate destination for staying updated on the latest in tech. We deliver fresh insights and updates to help you dive into dynamic content and vibrant community discussions. Explore features like intuitive categories, interactive sections, and seamless social sharing tools to stay connected. By registering, unlock personalized interactions and enhanced post engagement for a tailored experience.
             </p>
             
             <button></button>
