--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -15,8 +15,10 @@
              
                 <div class="post-container">
                     <!-- Blog Image Section -->
-                    <div class="post-image">
-                        <img src="{{blog.image.url}}" alt="Blog Featured Image">
+                    <div class="parent-post-image">
+                        <div class="post-image">
+                            <img src="{{blog.image.url}}" alt="Blog Featured Image">
+                        </div>
                     </div>
                 
                     <!-- Blog Header Section -->
@@ -112,7 +114,8 @@
                     <article class="related-post">
                         {% comment %} <img src="{{myblog.image.url}}" alt="Post Image" class="related-post__image"> {% endcomment %}
                         <h3 class="related-post__title">{{myblog.title}}</h3>
-                        <p class="related-post__content">{{myblog.body|slice:':80'}}...</p>
+                        <p class="related-post__content">{{myblog.body|slice:':80'}}...</p><br>
+                        <p class="related-post__content">{{myblog.time | date:"F j, Y"}}</p>
                         <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="related-post__link">Read more</a>
                     </article>
                     {% empty %}
