--- a/App/templates/profile.html
+++ b/App/templates/profile.html
@@ -23,7 +23,7 @@
             </div>
 
             <!-- Edit Profile Modal -->
-            <div id="editProfileModal" class="modal">
+            <div id="editProfileModal" class="modalProfile">
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <h2 class="prof-edit-h2">Edit Profile</h2>
