--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -42,13 +42,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'CSS/styles88.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/related21.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/postpag112.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/styleterms5.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/profile12.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/about31.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/styles88.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/related21.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/postpag112.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/styleterms5.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/profile12.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/about31.css'%}">
 
   <!-- 
     - preload images
