--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -36,7 +36,7 @@
       <p class="blog-register-text">
           New to Tech Scape? <a href="{% url 'register' %}">Sign up</a>
       </p>
-      <script src="{% static 'JavaScript/login00.js'%}?v={{ STATIC_VERSION }}"></script>
+      <script src="{% static 'JavaScript/login00.js'%}"></script>
     </div>
 </div>
 {% endblock  %}
