--- a/App/templates/passwordreset.html
+++ b/App/templates/passwordreset.html
@@ -29,7 +29,7 @@
         <p class="blog-register-text">
             Token expired? <a href="{% url 'reset-link' %}">Request a new reset link</a>
         </p>
-        <script src="{% static 'JavaScript/PasswordReset97.js'%}?v={{ STATIC_VERSION }}"></script>
+        <script src="{% static 'JavaScript/PasswordReset97.js'%}"></script>
     </div>
 </div>
 {% endblock  %}
