--- a/App/templates/profile.html
+++ b/App/templates/profile.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 </div>
-<script src="{% static 'JavaScript/profile54.js'%}?v={{ STATIC_VERSION }}"></script>
+<script src="{% static 'JavaScript/profile54.js'%}"></script>
 
 {% endblock %}
 
