--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -120,7 +120,7 @@
             </div>
         
         </body>
-        <script src="{% static 'JavaScript/Register11.js'%}?v={{ STATIC_VERSION }}"></script>
+        <script src="{% static 'JavaScript/Register11.js'%}"></script>
         
     </div>
 </div>
