--- a/App/templates/verify.html
+++ b/App/templates/verify.html
@@ -29,7 +29,7 @@
             Don't need to reset your password?<a href="{% url 'login' %}">Sign in</a>
         </p>
     </div>
-    <script src="{% static 'JavaScript/ResetLink56.js'%}?v={{ STATIC_VERSION }}"></script>
+    <script src="{% static 'JavaScript/ResetLink56.js'%}"></script>
 </div>
 {% endblock  %}
 
