--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -449,7 +449,7 @@
               <li>
                 <a href="{% url 'category_detail' name=category.name %}">
                   <button class="card tag-btn">
-                      <img src="{%static 'Images/tag6.png' %}" width="32" height="32" loading="lazy" alt="Travel">
+                      <img src="{{category.dp.url}}" width="32" height="32" loading="lazy" alt="Travel">
 
                       <p class="btn-text">{{category.name}}</p>
                   </button>
