--- a/App/templates/categories.html
+++ b/App/templates/categories.html
@@ -35,8 +35,8 @@
                 <li>
                 <a href="{% url 'category_detail' name=category.name %}">
                 <button class="card tag-btn">
-                    {% comment %} <img src="{{category.image.url}}" width="32" height="32" loading="lazy" alt="Travel"> {% endcomment %}
-                    <img src="{{category.dp.url}}" class="logo_dp">
+                     <img src="{{category.dp.url}}" width="32" height="32" loading="lazy"> 
+                    {% comment %}<img src="{{category.dp.url}}" class="logo_dp">{% endcomment %}
 
                     <p class="btn-text">{{category.name}}</p>
                 </button>
