Update Iframe Cookies

--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -164,7 +164,7 @@
                   if (match) {
                      let videoId = match[1];
                      let iframe = document.createElement("iframe");
-                     iframe.setAttribute("src", `https://www.youtube.com/embed/${videoId}`);
+                     iframe.setAttribute("src", `https://www.youtube-nocookie.com/embed/${videoId}`);
                      iframe.setAttribute("width", "300");
                      iframe.setAttribute("height", "315");
                      iframe.setAttribute("frameborder", "0");
