--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -165,8 +165,9 @@
                      let videoId = match[1];
                      let iframe = document.createElement("iframe");
                      iframe.setAttribute("src", `https://www.youtube-nocookie.com/embed/${videoId}`);
-                     iframe.setAttribute("width", "300");
+                     iframe.setAttribute("width", "100%");
                      iframe.setAttribute("height", "315");
+                     iframe.style.maxWidth = "560px";
                      iframe.setAttribute("frameborder", "0");
                      iframe.setAttribute("allowfullscreen", "");
 
