--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -166,8 +166,9 @@
                      let iframe = document.createElement("iframe");
                      iframe.setAttribute("src", `https://www.youtube-nocookie.com/embed/${videoId}`);
                      iframe.setAttribute("width", "100%");
-                     iframe.setAttribute("height", "315");
+                     iframe.setAttribute("height", "250px");
                      iframe.style.maxWidth = "560px";
+                     iframe.style.maxHeight = "350px";
                      iframe.setAttribute("frameborder", "0");
                      iframe.setAttribute("allowfullscreen", "");
 
