--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -25,6 +25,7 @@
   <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
+  <meta name="google-adsense-account" content="ca-pub-4851033849501475">
 
 
   <!-- 
