--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -412,7 +412,8 @@
 
           </ul>
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4851033849501475"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous">
+          </script>
           <ins class="adsbygoogle"
              style="display:block"
              data-ad-format="fluid"
