--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -412,17 +412,16 @@
 
           </ul>
           <ul class="feature-list">
-              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4851033849501475"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-64+cx-n-8l+nb"
-     data-ad-client="ca-pub-4851033849501475"
-     data-ad-slot="5513167235"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4851033849501475" crossorigin="anonymous"></script>
+              <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="fluid"
+                  data-ad-layout-key="-64+cx-n-8l+nb"
+                  data-ad-client="ca-pub-4851033849501475"
+                  data-ad-slot="5513167235"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
           </ul>
 
           <a href="{% url 'categories'%}" class="btn btn-secondary">
