--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -264,6 +264,18 @@
         </div>
       </section>
       {% endblock  %}
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4851033849501475" crossorigin="anonymous"></script>
+      <!-- Hor Ads -->
+      <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-4851033849501475"
+       data-ad-slot="4756550961"
+       data-ad-format="auto"
+       data-full-width-responsive="true">
+      </ins>
+      <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
 
       <!-- 
         - #TOPICS
