--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -51,6 +51,16 @@
   <link rel="stylesheet" href="{% static 'CSS/profile12.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/about31.css'%}">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P26NM17QKX"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P26NM17QKX');
+  </script>
+
   <!-- 
     - preload images
   -->
