--- a/App/static/CSS/styles88.css
+++ b/App/static/CSS/styles88.css
@@ -175,7 +175,7 @@ html {
 }
 
 body {
-  background-color: white;
+  background-color: var(--bg-oxford-blue-2);
   color: var(--text-shadow-blue);
   font-family: var(--fontFamily-noto_sans);
   font-size: 1.6rem;
