blog body custom truncate

--- a/App/templates/category_detail.html
+++ b/App/templates/category_detail.html
@@ -81,7 +81,7 @@
                             <div>
                                 {% comment %} <p class="card-title">{{myblog.username}}</p> {% endcomment %}
         
-                                <p class="card-subtitle">{{myblog.time|date:"F j, Y h:i a"}}</p>
+                                <p class="card-subtitle">{{myblog.time|date:"F j, Y"}}</p>
                             </div>
                             </div>
         
