--- a/App/templates/categories.html
+++ b/App/templates/categories.html
@@ -103,7 +103,7 @@
                                 </a>
                                 </h3>
                                 <h1 class='innerbodytext'>
-                                {{myblog.body|slice:':90'}}...
+                                    {{myblog.body|split_text:90|safe}}...
                                 </h1>
                                 <div class="card-wrapper">
             
