--- a/App/templates/category.html
+++ b/App/templates/category.html
@@ -60,7 +60,7 @@
                             {{myblog.title}}
                             </a>
                             <h1 class='innerbodytext'>
-                            {{myblog.body|slice:':72'}}...
+                                {{myblog.body|split_text:90|safe}}...
                             </h1>
                         </h3>
 
