featured product update

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -110,7 +110,7 @@
           </li>
 
           <li>
-            <a href="#featured" class="navbar-link hover-1" data-nav-toggler>Premium+</a>
+            <a  onclick="premium()" class="navbar-link hover-1" data-nav-toggler>Premium+</a>
           </li>
 
           <li>
@@ -768,15 +768,13 @@
             </a>
 
             <p class="footer-text">
-              When an unknown prnoto sans took a galley and scrambled it to make specimen book not only five When an
-              unknown prnoto sans took a galley and scrambled it to five centurie.
+                Tech Scape is your go-to source for the latest in technology. We provide insightful articles, in-depth reviews, and up-to-date news to keep you informed. Join our community to explore, learn, and stay ahead in the tech world.
             </p>
 
-            <p class="footer-list-title">Address</p>
+            <p class="footer-list-title">Trend Watch</p>
 
             <address class="footer-text address">
-              123 Main Street <br>
-              New York, NY 10001
+              Stay Updated with the Latest Tech Trends!
             </address>
 
           </div>
@@ -911,6 +909,7 @@
   <script src="{% static 'JavaScript/scriptHome.js'%}"></script>
   <script src="{% static 'JavaScript/scriptUsers919.js'%}"></script>
   <script src="{% static 'JavaScript/scripterms11.js'%}"></script>
+  <script src="{% static 'JavaScript/Featured.js'%}"></script>
   <script>
     window.userData = {
       username: "{{ user.id }}",
