--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -110,7 +110,7 @@
           </li>
 
           <li>
-            <a  onclick="premium()" class="navbar-link hover-1" data-nav-toggler>Premium+</a>
+            <a  onclick="premium()" class="navbar-link premium hover-1" data-text="change" data-nav-toggler>Premium</a>
           </li>
 
           <li>
