update app featured endpoint

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -110,8 +110,8 @@
           </li>
 
           <li>
-            <a href="#" onclick="premium()" class="navbar-link premium hover-1" data-text="change" data-nav-toggler>Premium</a>
-          </li>
+            <a href="#" class="navbar-link premium hover-1" onclick="premium()">Premium</a>
+        </li>        
 
           <li>
             <a href="{% url 'recentposts' %}" class="navbar-link hover-1" data-nav-toggler>Recent Post</a>
