--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -13,11 +13,11 @@
   <!--
     - primary meta tags
   -->
-  <title>Tech Scape e</title>
+  <!-- <title>Tech Scape</title>
   <meta name="title" content="Tech Scape">
   <meta property="og:image" content="{{ post.thumbnail.url }}">
 
-  <meta name="description" content="This is a blog html template made by Laycon">
+  <meta name="description" content="This is a blog html template made by Laycon"> -->
 
   {% block meta %}
   <meta property="og:title" content="TechScape">
