--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -13,8 +13,8 @@
   <!--
     - primary meta tags
   -->
-  <!-- <title>Tech Scape</title>
-  <meta name="title" content="Tech Scape">
+  <title>Tech Scape</title>
+  <!-- <meta name="title" content="Tech Scape">
   <meta property="og:image" content="{{ post.thumbnail.url }}">
 
   <meta name="description" content="This is a blog html template made by Laycon"> -->
