--- a/App/templates/category_detail.html
+++ b/App/templates/category_detail.html
@@ -29,74 +29,74 @@
             </p>
 
             <ul class="feature-list">
-                
+
                 {% for myblog in page_obj %}
                 <li>
                     <div class="card feature-card">
-        
+
                         <figure class="card-banner img-holder" style="--width: 1602; --height: 903;">
                         <img src="{{myblog.image.url}}" width="1602" height="903" loading="lazy"
                             alt="Self-observation is the first step of inner unfolding" class="img-cover">
                         </figure>
-        
+
                         <div class="card-content">
-        
+
                         <div class="card-wrapper">
                             <div class="card-tag">
                                 <div class="card-tag">
                                     <div class="post-actionspage">
-                                                      
+
                                         <button class="post-likes" onclick="toggleLike('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
                                             ❤️ <span id="like-count">{{myblog.likes.count}}</span>
                                         </button>
                                         <button class="post-shares-home" onclick="toggleShareAll('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
                                             🚀 <span id="share-count" class="share-count" data-id="{{ myblog.id }}">{{ myblog.shares_count }}</span>
                                           </button>
-                                        
+
                                     </div>
                                   </div>
                             </div>
-        
+
                             <div class="wrapper">
                             <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
-        
+
                             <span class="span">{{myblog.mins_read}} minutes read</span>
                             </div>
                         </div>
-        
+
                         <h3 class="headline headline-3">
                             <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="card-title hover-2">
                             {{myblog.title}}
                             </a>
                         </h3>
                         <h1 class='innerbodytext'>
-                            {{myblog.body|slice:':72'}}...
+                            {{myblog.body|split_text:72|safe}}...
                         </h1>
                         <div class="card-wrapper">
-        
+
                             <div class="profile-card">
                             {% comment %} <img src="{{myblog.dp.url}}" width="48" height="48" loading="lazy" alt="Joseph"
                                 class="profile-banner"> {% endcomment %}
-        
+
                             <div>
                                 {% comment %} <p class="card-title">{{myblog.username}}</p> {% endcomment %}
-        
+
                                 <p class="card-subtitle">{{myblog.time|date:"F j, Y"}}</p>
                             </div>
                             </div>
-        
+
                             <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="card-btn">Read more</a>
-        
+
                         </div>
-        
+
                         </div>
-        
+
                     </div>
                 </li>
                 {% empty %}
                     <li>No posts available.</li>
-                {% endfor %}  
-                
+                {% endfor %}
+
             </ul>
 
             {% if  blog_posts  %}
@@ -114,7 +114,7 @@
                             </a>
                         </div>
                     {% endif %}
-                        
+
                     {% for num in page_range %}
                         {% if page_obj.number == num %}
                             <div class="pageon">
@@ -130,8 +130,8 @@
                         <span>...</span>
                         <a href="?page={{ page_obj.paginator.num_pages }}" class="pagination-btn">{{ page_obj.paginator.num_pages }}</a>
                     {% endif %}
-                                    
-                        
+
+
                     {% if page_obj.has_next %}
                         <a href="?page={{ page_obj.next_page_number }}" class="pagination-btn" aria-label="next page">
                             <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -142,8 +142,8 @@
                                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                             </a>
                         </div>
-                    {% endif %}                    
-    
+                    {% endif %}
+
                 </nav>
             </div>
             {% endif %}
