--- a/App/templates/category_detail.html
+++ b/App/templates/category_detail.html
@@ -1,4 +1,5 @@
 {%extends 'layout.html'%}
+{% load custom_filters %}
 
 {% block hero %}
 
@@ -70,7 +71,7 @@
                             </a>
                         </h3>
                         <h1 class='innerbodytext'>
-                            {{myblog.body|split_text:90|safe}}...
+                            {{myblog.body|split_text:120|safe}}...
                         </h1>
                         <div class="card-wrapper">
 
