--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -21,6 +21,7 @@
   <meta property="og:image" content="">
   <meta property="og:url" content="{{ request.build_absolute_uri }}">
   <meta property="og:type" content="article">
+
   {% endblock %}
 
   <!--
@@ -50,7 +51,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{% static 'CSS/styles88.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/related21.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/relatedd349.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/postpag112.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/styleterms5.css'%}">
   <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}">
