--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -98,7 +98,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="{% static 'logo.svg'%}" width="119" height="37" alt="Tech Scape logo">
+            <img src="https://ui-avatars.com/api/?name=TechScape&background=10B981&color=FFF&size=150" width="119" height="37" alt="Tech Scape logo">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -118,7 +118,7 @@
 
           <li>
             <a href="#" class="navbar-link premium hover-1" onclick="premium()">Premium</a>
-        </li>
+          </li>
 
           <li>
             <a href="{% url 'recentposts' %}" class="navbar-link hover-1" data-nav-toggler>Recent Post</a>
